syntax = "proto3";

package com.github.spark.account;

option java_multiple_files = true;


enum AccountType {
  CURRENCY = 0;
  FUTURE = 1;
}

message Decimal {
  string str = 1;
  int64 unscaled_value = 2;
  int32 scale = 3;
}

message CreateAccountRequest {
  int64 user_id = 1;
  AccountType account_type = 2;
  Decimal total_balance = 3;
  Decimal available_balance = 4;
  Decimal lock_balance = 5;
}

message CreateAccountResponse {
  bool success = 1;
  int64 account_id = 2;
  string msg = 3;
}

message QueryAccountRequest {
  int64 user_id = 1;
  AccountType account_type = 2;
}

message QueryAccountResponse {
  bool success = 1;
  int64 account_id = 2;
  string msg = 3;
}

service AccountService {
  //创建账号
  rpc createAccount(CreateAccountRequest) returns (CreateAccountResponse);

  rpc queryAccount(QueryAccountRequest) returns (stream QueryAccountResponse);

  rpc queryAccountBatch(stream QueryAccountRequest) returns (QueryAccountResponse);

  rpc queryAccountStream(stream QueryAccountRequest) returns (stream QueryAccountResponse);
}